@@ -1,7 +1,7 @@
 <?php
 /*
 ** Zabbix
-** Copyright (C) 2000-2011 Zabbix SIA
+** Copyright (C) 2000-2012 Zabbix SIA
 **
 ** This program is free software; you can redistribute it and/or modify
 ** it under the terms of the GNU General Public License as published by
@@ -10,15 +10,15 @@
 **
 ** This program is distributed in the hope that it will be useful,
 ** but WITHOUT ANY WARRANTY; without even the implied warranty of
-** MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+** MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
 ** GNU General Public License for more details.
 **
 ** You should have received a copy of the GNU General Public License
 ** along with this program; ifnot, write to the Free Software
 ** Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
 **/
-?>
-<?php
+
+
 require_once dirname(__FILE__).'/include/config.inc.php';
 require_once dirname(__FILE__).'/include/triggers.inc.php';
 
@@ -38,150 +38,152 @@ $definedErrorPhrases = array(
 );
 
 require_once dirname(__FILE__).'/include/page_header.php';
-?>
-<?php
-//----------------------------------------------------------------------
 
 // expression analyze
-	$expression = get_request('expression', '');
+$expression = get_request('expression', '');
 
-	define('NO_LINK_IN_TESTING', true);
-	list($outline, $eHTMLTree) = analyzeExpression($expression);
+define('NO_LINK_IN_TESTING', true);
+list($outline, $eHTMLTree) = analyzeExpression($expression);
 
 // test data (create table, create check fields)
+$dataTable = new CTable(null, 'tableinfo');
+$dataTable->setAttribute('id', 'data_list');
+$dataTable->setHeader(array(_('Expression Variable Elements'), _('Result type'), _('Value')));
 
-	$data_table = new CTable(null, 'tableinfo');
-	$data_table->setAttribute('id', 'data_list');
+$octet = false;
+$datas = array();
+$fields = array();
+$rplcts = array();
+$allowedTesting = true;
 
-	$data_table->setHeader(array(_('Expression Variable Elements'), _('Result type'), _('Value')));
+$expressionData = new CTriggerExpression();
+if ($expressionData->parse($expression)) {
+	$macrosData = array();
 
-	$octet = false;
-	$datas = array();
-	$fields = array();
-	$rplcts = array();
-	$allowedTesting = true;
+	$expressions = array_merge($expressionData->expressions, $expressionData->macros, $expressionData->usermacros, $expressionData->lldmacros);
 
-	$expressionData = new CTriggerExpression();
-	if ($expressionData->parse($expression)) {
-		$macrosData = array();
+	foreach ($expressions as $exprPart) {
+		if (isset($macrosData[$exprPart['expression']])) {
+			continue;
+		}
 
-		$expressions = array_merge($expressionData->expressions, $expressionData->macros, $expressionData->usermacros,
-				$expressionData->lldmacros);
+		$fname = 'test_data_'.md5($exprPart['expression']);
+		$macrosData[$exprPart['expression']] = get_request($fname, '');
 
-		foreach ($expressions as $exprPart) {
-			if (isset($macrosData[$exprPart['expression']])) {
-				continue;
-			}
+		$info = get_item_function_info($exprPart['expression']);
 
-			$fname = 'test_data_'.md5($exprPart['expression']);
-			$macrosData[$exprPart['expression']] = get_request($fname, '');
+		if (!is_array($info) && isset($definedErrorPhrases[$info])) {
+			$allowedTesting = false;
+			$control = new CTextBox($fname, $macrosData[$exprPart['expression']], 30);
+			$control->setAttribute('disabled', 'disabled');
+		}
+		else {
+			$octet = ($info['value_type'] == 'HHMMSS');
+			$validation = $info['validation'];
 
-			$info = get_item_function_info($exprPart['expression']);
+			if (substr($validation, 0, COMBO_PATTERN_LENGTH) == COMBO_PATTERN) {
+				$vals = explode(',', substr($validation, COMBO_PATTERN_LENGTH, zbx_strlen($validation) - COMBO_PATTERN_LENGTH - 4));
+				$control = new CComboBox($fname, $macrosData[$exprPart['expression']]);
 
-			if (!is_array($info) && isset($definedErrorPhrases[$info])) {
-				$allowedTesting = false;
-				$control = new CTextBox($fname, $macrosData[$exprPart['expression']], 30);
-				$control->setAttribute('disabled', 'disabled');
+				foreach ($vals as $v) {
+					$control->addItem($v, $v);
+				}
 			}
 			else {
-				$octet = ($info['value_type'] == 'HHMMSS');
-				$validation = $info['validation'];
-				if(substr($validation, 0, COMBO_PATTERN_LENGTH) == COMBO_PATTERN){
-					$vals = explode(',', substr($validation, COMBO_PATTERN_LENGTH, zbx_strlen($validation) - COMBO_PATTERN_LENGTH - 4));
-					$control = new CComboBox($fname, $macrosData[$exprPart['expression']]);
-					foreach ($vals as $v) {
-						$control->addItem($v, $v);
-					}
-				}
-				else {
-					$control = new CTextBox($fname, $macrosData[$exprPart['expression']], 30);
-				}
-				$fields[$fname] = array($info['type'], O_OPT, null, $validation, 'isset({test_expression})', $exprPart['expression']);
+				$control = new CTextBox($fname, $macrosData[$exprPart['expression']], 30);
 			}
 
-			$data_table->addRow(new CRow(array($exprPart['expression'], (is_array($info) || !isset($definedErrorPhrases[$info])) ? $info['value_type'] : new CCol($definedErrorPhrases[$info], 'disaster'), $control)));
-		}
-	}
-//---------------------------------- CHECKS ------------------------------------
-
-	$fields['test_expression'] = array(T_ZBX_STR, O_OPT, P_SYS|P_ACT, null, null);
-	if(!check_fields($fields)) {
-		$test = false;
-	}
-
-//------------------------ <ACTIONS> ---------------------------
-	if(isset($_REQUEST['test_expression'])){
-		show_messages();
-		$test = true;
-	}
-	else $test = false;
-//------------------------ </ACTIONS> --------------------------
-
-//------------------------ <FORM> ---------------------------
-
-	$frm_test = new CFormTable(_('Test'), 'tr_testexpr.php');
-	$frm_test->setHelp('web.testexpr.service.php');
-	$frm_test->setTableClass('formlongtable formtable');
-	$frm_test->addVar('form_refresh', get_request('form_refresh', 1));
-	$frm_test->addVar('expression', $expression);
-
-/* test data */
-	$frm_test->addRow(_('Test data'), $data_table);
-
-/* result */
-	$res_table = new CTable(null, 'tableinfo');
-	$res_table->setAttribute('id', 'result_list');
-	$res_table->setOddRowClass('even_row');
-	$res_table->setEvenRowClass('even_row');
-	$res_table->setHeader(array(_('Expression'), _('Result')));
-
-	ksort($rplcts, SORT_NUMERIC);
-
-	foreach($eHTMLTree as $e){
-		$result = '-';
-		if($allowedTesting && $test && isset($e['expression'])){
-			$result = evalExpressionData($e['expression']['value'], $macrosData, $octet);
+			$fields[$fname] = array($info['type'], O_OPT, null, $validation, 'isset({test_expression})', $exprPart['expression']);
 		}
 
-		$style = 'text-align: center;';
-		if($result != '-')
-			$style = ($result == 'TRUE') ? 'background-color: #ccf; color: #00f;': 'background-color: #fcc; color: #f00;';
+		$resultType = (is_array($info) || !isset($definedErrorPhrases[$info]))
+			? $info['value_type']
+			: new CCol($definedErrorPhrases[$info], 'disaster');
 
-		$col = new CCol($result);
-		$col->setAttribute('style', $style);
-		$res_table->addRow(new CRow(array($e['list'], $col)));
+		$dataTable->addRow(new CRow(array($exprPart['expression'], $resultType, $control)));
 	}
+}
 
-	$result = '-';
-	if($allowedTesting && $test){
-		$result = evalExpressionData($expression, $macrosData, $octet);
+// checks
+$fields['test_expression'] = array(T_ZBX_STR, O_OPT, P_SYS|P_ACT, null, null);
+if (!check_fields($fields)) {
+	$test = false;
+}
+
+// actions
+if (isset($_REQUEST['test_expression'])) {
+	show_messages();
+	$test = true;
+}
+else {
+	$test = false;
+}
+
+// form
+$testForm = new CFormTable(_('Test'), 'tr_testexpr.php');
+$testForm->setHelp('web.testexpr.service.php');
+$testForm->setTableClass('formlongtable formtable');
+$testForm->addVar('form_refresh', get_request('form_refresh', 1));
+$testForm->addVar('expression', $expression);
+$testForm->addRow(_('Test data'), $dataTable);
+
+$resultTable = new CTable(null, 'tableinfo');
+$resultTable->setAttribute('id', 'result_list');
+$resultTable->setOddRowClass('even_row');
+$resultTable->setEvenRowClass('even_row');
+$resultTable->setHeader(array(_('Expression'), _('Result')));
+
+ksort($rplcts, SORT_NUMERIC);
+
+foreach ($eHTMLTree as $e) {
+	$result = array('result' => '-', 'error' => '');
+
+	if ($allowedTesting && $test && isset($e['expression'])) {
+		$result = evalExpressionData($e['expression']['value'], $macrosData, $octet);
 	}
 
 	$style = 'text-align: center;';
-	if($result != '-')
-		$style = ($result == 'TRUE') ? 'background-color: #ccf; color: #00f;': 'background-color: #fcc; color: #f00;';
+	if ($result['result'] != '-') {
+		$style = ($result['result'] == 'TRUE')
+			? 'background-color: #ccf; color: #00f;'
+			: 'background-color: #fcc; color: #f00;';
+	}
 
-	$col = new CCol($result);
+	$col = new CCol(array($result['result'], SPACE, $result['error']));
 	$col->setAttribute('style', $style);
-	$res_table->setFooter(array($outline, $col), $res_table->headerClass);
 
-	$frm_test->addRow(_('Result'), $res_table);
+	$resultTable->addRow(new CRow(array($e['list'], $col)));
+}
+
+$result = array('result' => '-', 'error' => '');
+
+if ($allowedTesting && $test) {
+	$result = evalExpressionData($expression, $macrosData, $octet);
+}
+
+$style = 'text-align: center;';
+if ($result['result'] != '-') {
+	$style = ($result['result'] == 'TRUE')
+		? 'background-color: #ccf; color: #00f;'
+		: 'background-color: #fcc; color: #f00;';
+}
+
+$col = new CCol(array($result['result'], SPACE, $result['error']));
+$col->setAttribute('style', $style);
+
+$resultTable->setFooter(array($outline, $col), $resultTable->headerClass);
+
+$testForm->addRow(_('Result'), $resultTable);
 
 // action buttons
-	$btn_test = new CSubmit('test_expression', _('Test'));
-	if(!$allowedTesting) $btn_test->setAttribute('disabled', 'disabled');
-	$frm_test->addItemToBottomRow($btn_test);
-	$frm_test->addItemToBottomRow(SPACE);
+$testButton = new CSubmit('test_expression', _('Test'));
+if (!$allowedTesting) {
+	$testButton->setAttribute('disabled', 'disabled');
+}
 
-	$btn_close = new CButton('close', _('Close'),'javascript: self.close();');
-	$frm_test->addItemToBottomRow($btn_close);
-
-	$frm_test->show();
-
-//------------------------ </FORM> ---------------------------
-?>
-<?php
+$testForm->addItemToBottomRow($testButton);
+$testForm->addItemToBottomRow(SPACE);
+$testForm->addItemToBottomRow(new CButton('close', _('Close'), 'javascript: self.close();'));
+$testForm->show();
 
 require_once dirname(__FILE__).'/include/page_footer.php';
-
-?>
